# listing-scraper

./: Cargo.toml  README.md  babel.config.json  package-lock.json  package.json  run.sh  tsconfig.json  webpack.config.js
deploy/: cdk.json  package-lock.json  package.json
deploy/lib/: deploy-stack.ts
retired/: Cargo.toml  README.md
retired/src/: job_client.rs  lib.rs  listing_state.rs  request.json
src/: client.rs  config.rs  configuration.ts  emailClient.ts  hits.rs  hits.ts  index.ts  lib.rs  listingClient.ts  listingState.ts  listingStateClient.ts  listing_state.rs  package.json  request.json  result.rs  result.ts  template.ejs
tests/: configuration.test.ts  listingState.test.ts
tests/__mocks__/: fs.ts
