[package]
name = "listing-scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "./src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
